Modules/css/style.css
/* ... */
/*.top-btns ul li a:hover{
	background-color: #fff;
    color: #bc1912;
}*/
.top-btns ul li.dropdown-toggle ul.dropdown-menu li a{
	color:#333;
}
.top-btns ul li.dropdown-toggle ul.dropdown-menu li a:hover{
	color:#bc1912;
}
.top-btns ul li.dropdown-toggle.open {
	background-color:#bc1912;
}
.top-btns ul li.dropdown-toggle.open a{
	background-color:transparent;
	color:#fff;
}
.top-btns ul li.dropdown-toggle ul.dropdown-menu li{
	background-color: #fff;
    color: #bc1912;
	padding-top:5px;
	padding-bottom: 5px;
}
.hdr-top .top-btns ul li a:hover{
	color:#fff;
}
.top-btns ul li.dropdown-toggle.open a:hover{
	color:#fff;
}
.top-btns ul li.dropdown-toggle ul.dropdown-menu li:hover{
	background-color:#bc1912;
}
.top-btns ul li.dropdown-toggle ul.dropdown-menu li a:hover{
	color:#fff;
}
body .navbar-brand {
    padding: 5px;
    max-width: 242px;
    height: 100%;
    margin-top: 10px;
}
.hdr-area .navbar-main li a{
	color:#0b3462;
	font-size:14px;
	font-weight: 600;
	text-transform: uppercase;
}
.hdr-area .navbar-main li.active a{
	color:#bc1912;
}
.hdr-area .navbar-main li a:hover , .hdr-area .navbar-main li.active a:hover{
	color:#0b3462;
}
.hdr-area{
	height: 60px;
}
.slider__inr{
	background-image: url('../images/caring.png');
	background-repeat: no-repeat;
	background-position: bottom right;
    height: 480px;
	border: 1px solid #CCC;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: -2px 2px 10px #333;
    -webkit-box-shadow: -2px 2px 10px #333;
    box-shadow: -2px 2px 10px #333;
	background-color:#fff;
}
.slider-hed h1{
	color: #0b3462;
    font-size: 42px;
    font-weight: 600;
}
.slider-hed {
    padding: 20px;
    width: 65%;
}
.slider__more {
    display: inline-block;
    background-color: #bc1912;
    text-align: center;
    padding: 6px 12px 10px;
    border-radius: 5px;
	margin-left: 20px;
	margin-bottom: 30px;
}
.slider__more a{
	font-size: 34px;
    color: #fff;
    text-transform: uppercase;
}
.slider__more a i{
	font-size: 72px;
}
.slider__images {
	padding-left: 15px;
}
.ftr-area{
	background-color: #0b3462;
}
.ftr__copyright p{
	margin-bottom: 0;
	line-height:30px;
	font-size: 12px;
	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
}
.ftr-box{
	padding: 15px;
}
.ftr-box .copyright{
	color:#fff;
}
.ftr-box .copyright a{
	color:#fff;
	text-decoration: none;
}
.ftr-box .copyright a:hover{
	text-decoration: underline;
}
.ftr__inr ul li a{
	text-transform: uppercase;
    font-size: 12px;
    color: #0b3462;
    font-weight: bold;
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    text-decoration: none;
	padding: 4px 40px;
}
.ftr__inr {
	line-height:30px;
	height:30px;
}
.ftr__copyright p a{
	color:#0b3462;
	padding-right:10px;
}
.ftr__copyright p a:hover{
	text-decoration: underline;
	color: #0b3462;
}
body .hdr--sticky-active .navbar-brand{
	max-width: 140px;
	margin-top: 0;
}
.hdr--sticky-active .navbar-main{
	padding: 0 0;
}
.hdr--sticky-active .top-btns ul li {
    color: #fff;
    padding-right: 15px;
    padding-top: 12px;
    padding-bottom: 13px;
    line-height: 35px;
}

/*Home page css end*/ 

/*Begin page css*/

.section__bg{
	background-color:#ededed;
	padding:80px 0 60px;
}
.begin__img img{
	border: 1px solid #CCC;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: -2px 2px 10px #333;
    -webkit-box-shadow: -2px 2px 10px #333;
    box-shadow: -2px 2px 10px #333;
    background-color: #fff;
	width: 100%;
}
.continue-btn{
	display: inline-block;
	width: 100%;
}
.continue-btn a{
	padding: 10px 30px;
	background: #F4F4F4;
    color: #000;
    text-decoration: none;
    font-weight: bold;
    font-size: 18px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -moz-box-shadow: -2px 2px 5px #333;
    -webkit-box-shadow: -2px 2px 5px #333;
    box-shadow: -2px 2px 5px #333;
}
.continue-btn a:hover{
	background: #bc1912;
	color:#fff;
}
.begin-box{
	position: relative;
}
.begin-box .continue-btn{
	position: absolute;
	left: 0;
    bottom: 30px;
}


/*Begin page css end*/

/*Outline page CSS*/

.outline__inr{
	border: 1px solid #CCC;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: -2px 2px 10px #333;
    -webkit-box-shadow: -2px 2px 10px #333;
    box-shadow: -2px 2px 10px #333;
    background-color: #fff;
	width: 100%;
	height: auto;
}
.outline__cont h2{
	color: #0b3462;
    font-size: 36px;
	font-weight: 600;
}
.outline__cont ul li{
    background-image: url('../images/bullet.png');
    background-position: left 3px;
    height: 30px;
    background-repeat: no-repeat;
    padding: 0px 0px 0px 40px;
	margin: 30px 0px;
	text-align: left;
	display: block;
	font-size: 24px;
    line-height: 20px;
	color:#000;
}
.outline-box{
	position: relative;
}
.outline-box .continue-btn{
	position: static;
	left: 0;
    bottom: 30px;
	margin: 10px 0 30px;
}
    
/*End*/

/*Terms Page CSS */

.terms__inr{
	border: 1px solid #CCC;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -moz-box-shadow: -2px 2px 10px #333;
    -webkit-box-shadow: -2px 2px 10px #333;
    box-shadow: -2px 2px 10px #333;
    background-color: #fff;
	width: 100%;
	padding:20px;
	height: 550px;
}
.terms__cont h2{
	text-align: center;
	color: #0b3462;
    font-size: 36px;
    font-weight: 600;
}
.terms__def {
	min-height: 136px;
}
.terms__def span{
	font-size: 24px;
	font-weight: 500;
	color:#000;
}
.terms__def span.terms__title{
	font-size: 24px;
	font-weight: 600;
    color: rgb(204, 204, 204);
}
.terms__def span.terms__title{
	display: inline;
}
.terms__def span#dspdef{
	height:135px;
}
.terms-box{
	position: relative;
}
.terms-box .continue-btn{
	position: absolute;
    left: 0;
    bottom: 30px;
}
.terms__def.active span.terms__title{
	color: #0b3462;
    font-weight: bold;
	cursor:pointer;
}
.terms__def h3{
	text-align: center;
}
/* ... */

